# openexchange

./: .env.example  .gitignore  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yml  pages.yml
deploy/: docker-compose.demo.yml  docker-compose.yml  koyeb.yaml  prometheus.yml  render.yaml
docs/: architecture.md  build-journal.md  cloud-deploy.md  explain-like-im-10.md  roadmap.md  twelve-factor.md
docs/adr/: 0001-record-architecture-decisions.md  0002-order-book-data-structure.md  0003-trade-event-streaming.md  0004-order-event-streaming.md  0005-risk-signal-gating.md  0006-in-gateway-matching-engine.md  0007-real-auth.md  0008-self-match-prevention.md
engine/: Dockerfile  README.md  build.gradle
gateway/: .dockerignore  Dockerfile  README.md  go.mod  go.sum
gateway/genproto/: openexchange.pb.go  openexchange_grpc.pb.go
proto/: openexchange.proto
risk/: .dockerignore  Dockerfile  README.md  conftest.py  pyproject.toml  requirements.txt
risk/app/: __init__.py  config.py  features.py  kafka_consumer.py  main.py  metrics.py  schemas.py  store.py
risk/app/genproto/: openexchange_pb2.py
risk/app/models/: __init__.py  anomaly.py  price_prediction.py  risk.py
risk/tests/: test_anomaly.py  test_consumer.py  test_features.py  test_risk_scorer.py
scripts/: chaostest.sh  loadtest.sh  seed.sh
web/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.module.css  App.tsx  config.ts  css-modules.d.ts  main.tsx  (+3 more)
(+88 files in other folders)
